--- a/desktop-supervisord.conf
+++ b/desktop-supervisord.conf
@@ -53,3 +53,10 @@ directory=/computer_use_server/api
 environment=DISPLAY=:99
 priority=8
 stderr_logfile=/var/log/api_server.stderr.log
+
+[program:api_server_v2]
+command=/opt/venv/bin/uvicorn computer_use_server.api_v2.api:app --host 0.0.0.0 --port 2000
+directory=/
+environment=DISPLAY=:99
+priority=9
+stderr_logfile=/var/log/api_server_v2.stderr.log
