Show only useful logs

--- a/desktop-supervisord.conf
+++ b/desktop-supervisord.conf
@@ -59,4 +59,5 @@ command=/opt/venv/bin/uvicorn computer_use_server.api_v2.api:app --host 0.0.0.0 
 directory=/
 environment=DISPLAY=:99
 priority=9
-stderr_logfile=/var/log/api_server_v2.stderr.log
+stdout_logfile=/var/log/api_server_v2.log
+redirect_stderr=true
