--- a/firefox-supervisord.conf
+++ b/firefox-supervisord.conf
@@ -24,32 +24,33 @@ command=Xvfb :99 -screen 0 RESOLUTION_PLACEHOLDER -ac
 stderr_logfile=/var/log/Xvfb.stderr.log
 priority=2
 
+[program:firefox]
+command=/bin/sh -c "sleep 2 && exec /usr/bin/firefox --kiosk --no-remote --new-instance --width WIDTH_PLACEHOLDER --height HEIGHT_PLACEHOLDER ${INITIAL_URL:-about:blank}"
+environment=DISPLAY=:99
+stderr_logfile=/var/log/firefox.err.log
+stdout_logfile=/var/log/firefox.out.log
+priority=3
+autorestart=true
+
+[program:firefox_fullscreen]
+command=/bin/sh -c "sleep 8 && xdotool search --sync --class 'firefox' windowactivate --sync windowmove 0 0 windowsize WIDTH_PLACEHOLDER HEIGHT_PLACEHOLDER key F11 || true"
+environment=DISPLAY=:99
+priority=4
+startsecs=0
+autorestart=false
+stderr_logfile=/var/log/firefox_fullscreen.stderr.log
+
 [program:x11vnc]
 command=/usr/bin/x11vnc -display :99 -forever -shared -nopw
-priority=4
+priority=5
 
 [program:novnc]
 command=websockify --web=/usr/share/novnc 6081 localhost:5900
-priority=5
-
-[program:update-launcher]
-command=sh -c 'mkdir -p /root/.config/xfce4/panel/launcher-19 && rm -rf /root/.config/xfce4/panel/launcher-19/* && cp -r /root/desktop_files/* /root/.config/xfce4/panel/launcher-19/ && chmod +x /root/.config/xfce4/panel/launcher-19/*.desktop'
-environment=DISPLAY=:99
-priority=3
-startretries=0
-startsecs=0
-autorestart=false
-stderr_logfile=/var/log/update-launcher.stderr.log
-
-[program:xfce]
-command=dbus-launch --exit-with-session startxfce4
-environment=DISPLAY=:99
 priority=6
-stderr_logfile=/var/log/xfce.stderr.log
 
 [program:ffmpeg]
 command=ffmpeg -f x11grab -video_size FFMPEG_PLACEHOLDER -r 30 -i :99 -c:v libx264 -preset ultrafast -pix_fmt yuv420p -movflags +faststart /tmp/session.mp4
-priority=10
+priority=7
 autorestart=false
 stderr_logfile=/var/log/ffmpeg.err.log
 
@@ -57,14 +58,15 @@ stderr_logfile=/var/log/ffmpeg.err.log
 command=/opt/venv/bin/uvicorn api:app --host 0.0.0.0 --port 8000
 directory=/computer_use_server/api
 environment=DISPLAY=:99
-priority=11
+priority=8
 stderr_logfile=/var/log/api_server.stderr.log
 
 [program:api_server_v2]
 command=/opt/venv/bin/uvicorn computer_use_server.api_v2.api:app --host 0.0.0.0 --port 2000
 directory=/
 environment=DISPLAY=:99
-priority=12
+priority=9
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
